--- a/style.css
+++ b/style.css
@@ -3,3 +3,15 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {
+  align-self: center;
+}
+nav {
+  align-self: center;
+}
+a {
+  align-self: center;
+  margin-left: 10px;
+  margin-right: 10px;
+  background-color: beige;
+}
